[package]
name = "scrollrun"
version = "0.1.0"
edition = "2021"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]
license = "MIT"
rust-version = "1.74.1"

[features]
default = []
more-warnings = []
even-more-warnings = ["more-warnings"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["cargo", "derive", "wrap_help"] }
termsize = "0.1.9"
